# Neo_VideoPlayer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  VideoPlayer.pro  VideoPlayer.slnx
VideoPlayer/: DatabaseManager.cpp  DatabaseManager.h  IconFont.cpp  IconFont.h  MainWindow.cpp  MainWindow.h  MpvPlayerWidget.cpp  MpvPlayerWidget.h  OptionsDialog.cpp  OptionsDialog.h  PlaylistModel.cpp  PlaylistModel.h  ThemeManager.cpp  ThemeManager.h  VideoPlayer.vcxproj  VideoPlayer.vcxproj.filters  main.cpp
VideoPlayer/resources/: resources.qrc  theme.qss
installer/: VideoPlayer.iss
reference/: collector.py  index_sheet.py  mover.py  processor.py  scanner.py
scripts/: register-default-app.ps1  unregister-default-app.ps1
